# libserialport

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Doxyfile.in  Makefile.am  NEWS  README  autogen.sh  cmake-config.h.in  configure.ac  libserialport.h  test-builds.sh  test-visibility-control-attribute.c  test-visibility-control-declspec.c  test_timing.c  windows.c  windows.rc.in
.github/workflows/: build.yml
buildstuff/: sed-substitute  sed-update-source-file
